applications/demo-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hiring-tracker
  labels:
    component: hiring-tracker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hiring-tracker-frontend
  template:
    metadata:
      labels:
        component: hiring-tracker-frontend
    spec:
      containers:
      - name: hiring-tracker
        image: 799468650620.dkr.ecr.ap-southeast-2.amazonaws.com/hiring-tracker-frontend-dev:0.0.0-000000
        ports:
        - containerPort: 3000
