applications/demo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiring-tracker
  labels:
    component: hiring-tracker-frontend
spec:
  type: ClusterIP
  selector:
    component: hiring-tracker-frontend
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
